# formatelf

./: .gitignore  Cargo.toml  README.md  auto-formatelf-hook.sh  clippy.nix  flake.nix  hook.nix  package.nix  shells.nix
benches/: set_rpath.rs
examples/: discord.nix
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cli.rs  mutate.rs  parse.rs
src/: autoformatelf.rs  cli.rs  codec.rs  constraints.rs  error.rs  ir.rs  layout.rs  ldcache.rs  lib.rs  main.rs  ops.rs  parser.rs  patch.rs  rpath.rs  serialize.rs  symbols.rs  verify.rs
tests/: autoformatelf.rs  codec_roundtrip.rs  cross_exec.rs  fuzz_parse.rs  mutating_ops.rs  print_diff.rs  prop_ops.rs  remove_rpath.rs  sample.c  serialize_identity.rs  set_rpath.rs
tests/fixtures/: mod.rs
