[package]
name = "formatelf"
version = "0.1.0"
edition = "2021"
description = "Modify the dynamic linker and RPATH of ELF executables"
license = "MIT"

[lib]
name = "formatelf"
path = "src/lib.rs"

[[bin]]
name = "formatelf"
path = "src/main.rs"
test = false

[dependencies]
object = { version = "0.36", default-features = false, features = ["read_core", "elf", "std"] }
memmap2 = "0.9"
thiserror = "2"
lexopt = "0.3"

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }

[profile.release]
panic = "abort"
