[package]
name = "formatelf"
version = "0.1.0"
edition = "2024"
description = "Modify the dynamic linker and RPATH of ELF executables"
license = "MIT"

[lib]
name = "formatelf"
path = "src/lib.rs"

[[bin]]
name = "formatelf"
path = "src/main.rs"
test = false

[dependencies]
object = { version = "0.36", default-features = false, features = ["read_core", "elf", "std"] }
thiserror = "2"
lexopt = "0.3"
memmap2 = "0.9"
tempfile = "3"

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }
divan = "0.1"

[[bench]]
name = "set_rpath"
harness = false

[profile.release]
panic = "abort"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Decoding/encoding ELF casts between integer widths on purpose; offsets and
# sizes are bounded by the file, not the pointer width.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
# ELF field names differ only by standard prefixes (e_phnum/e_shnum,
# rel/rela strides); renaming them to satisfy the lint would obscure intent.
similar_names = "allow"
