# Separate workspace so the fuzz instrumentation never leaks into the main
# crate's normal builds.
[package]
name = "formatelf-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = "1"

[dependencies.formatelf]
path = ".."

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mutate"
path = "fuzz_targets/mutate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cli"
path = "fuzz_targets/cli.rs"
test = false
doc = false
bench = false

[workspace]
